# ai-training-for-devs

./: .gitignore  README.md  pyproject.toml
0_Intro_exercices/: 0_python_cheatsheet.ipynb  1_maths.ipynb
1_embeddings_and_tokenization/: 1_embeddings.ipynb  2_tokenization_guide.ipynb
2_using_llms_with_langchain/: using_llms_with_langchain.ipynb
3_RAG_with_langchain/: RAG_Olympics.ipynb  RAG_Olympics_student.ipynb
3_RAG_with_langchain/data/: paris-2024-faq.json
4_more_advanced_RAG/: RAG_AI-Bay.ipynb  RAG_AI-Bay_student.ipynb
5_Evaluation/: README.md  create_langfuse_dataset.py  evaluate_rag_ai-bay.ipynb  run_evaluation.py
5_Evaluation/data/: faq_en.json  items_eval_en.json
5_Evaluation/utils/: metrics.py
6_Observability/: observe_on_langfuse.ipynb
7_Prompt_management/: prompt_management_on_langfuse.ipynb
8_Agents/: 0_agentic_RAG.ipynb  1_langchain_academy_sample-simple-graph.ipynb  2_langchain_academy_sample-router.ipynb  3_langchain_academy_sample-agent-memory.ipynb
9_mcps/: useful_commands.md  utils.py
9_mcps/servers/: local_tools.py
